# hipass-pass-gen

./: .clang-format  CMakeLists.txt  README.md
src/: clipboard.c  clipboard.h  generator.c  generator.h  hipass.c  rand.cpp  rand.h
